// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders an active spinner 1`] = `
<canvas
  style={
    {
      "display": "block",
      "height": 64,
      "margin": "auto",
      "width": 128,
    }
  }
/>
`;

exports[`<Spinner /> renders an inactive spinner 1`] = `
<canvas
  style={
    {
      "display": "none",
      "height": 64,
      "margin": "auto",
      "width": 128,
    }
  }
/>
`;
